<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/linLayout"
        android:layout_width="250dip"
        android:layout_height="fill_parent"
        android:background="#383838"
        android:orientation="vertical"
        android:tag="stuff" >

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#000000" >

            <TableRow
                android:id="@+id/tableRow1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rowPadding"
                android:background="#383838" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dip"
                    android:layout_marginTop="7dip"
                    android:text="@string/home"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/menuTextSize"
                    android:background="@android:drawable/list_selector_background"/> 
                 
   
            </TableRow>

            <TableRow
                android:id="@+id/tableRow2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rowPadding"
                android:background="#383838" >

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dip"
                    android:layout_marginTop="7dip"
                    android:text="@string/editBudget"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/menuTextSize" 
                         android:background="@android:drawable/list_selector_background"/>

            </TableRow>

            <TableRow
                android:id="@+id/tableRow3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rowPadding"
                android:background="#383838" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dip"
                    android:layout_marginTop="7dip"
                    android:text="@string/history"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/menuTextSize"
                         android:background="@android:drawable/list_selector_background" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/rowPadding"
                android:background="#383838" 
                >

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dip"
                    android:layout_marginTop="7dip"
                    android:text="@string/transaction"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/menuTextSize"
                    android:background="@android:drawable/list_selector_background" />

            </TableRow>

            <TableRow
                android:id="@+id/tableRow5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#383838"
                android:clickable="true" >

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="7dip"
                    android:layout_marginTop="7dip"
                    android:text="@string/deposit"
                    android:textAppearance="?android:attr/textAppearanceLarge"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/menuTextSize"
                         android:background="@android:drawable/list_selector_background" />

            </TableRow>

        </TableLayout>
    </LinearLayout>

</LinearLayout>